syntax = "proto3";
option go_package = "github.com/cbotte21/adt_queue-go/pb";

service QueueService {
  rpc Join(JoinRequest) returns (stream JoinResponse) {} //Returns 0 on failure, 1 while in queue, 2 when found game, JOIN chess.
  rpc Leave(LeaveRequest) returns (LeaveResponse) {}
}

message JoinRequest {
  string jwt = 1;
}

message JoinResponse {
  int32 status = 1;
}

message LeaveRequest {
  string jwt = 1;
}

message LeaveResponse {

}

